# GEMsembler

./: .gitignore  .gitlab-ci.yml  .pre-commit  LICENSE  MANIFEST.in  Makefile  README.md  conda_env.yml  conda_env_simple.yml  create_db.py  environment.yml  pyproject.toml  requirements.txt  tox.ini
Scripts/: BiGGnetwork.py  NONconversion.py  anticreation.py  comparison.py  conversion.py  creation.py  curation.py  drawing.py  general.py  genes.py  main.py  pathsfinding.py  selection.py  structural.py  supermodelF.py
docs/: conf.py  index.rst  tutorial.ipynb
example/Lactobacillus_plantarum/: CA1.xml  CA2.xml  Lactobacillus_plantarum_WCFS1.fasta  Lactobacillus_plantarum_WCFS1_agora.xml  MS2.sbml  iLP728_revision_data_met_C_c.xml  protein_fasta.faa
gemsembler/: __init__.py  comparison.py  creation.py  dbs.py  gathering.py  genes.py  pathsfinding.py  structural.py
src/gemsembler/: __init__.py  __main__.py  anticreation.py  comparison.py  conversion.py  creation.py  curation.py  dbs.py  downstream.py  drawing.py  gathering.py  genes.py  pathsfinding.py  periplasmic.py  quickdiff.py  selection.py  structural.py
src/gemsembler/data/: Makefile  masses_and_charges.json
supermodel/: BiGGnetwork.py  __init__.py  anticreation.py  comparison.py  conversion.py  creation.py  curation.py  dbs.py  drawing.py  gathering.py  general.py  genes.py  get_dbs.py  main.py  pathsfinding.py  periplasmic.py  selection.py  structural.py
tests/: test_conversion.py  test_curation.py  test_dbs.py  test_gathering.py  test_selection.py
